dts/testData/inspections/duplicateElement/Property.dtsi
/ {
    prop = "";
    <error descr="Duplicate property name">prop</error> = "";
};